rules/dangling-ingress-backend/test/success_with_service/input/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ok-service
  namespace: default
spec:
  selector:
    app: ok
  ports:
  - port: 80
